<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FireUp</string>

    <!-- Activities -->
    <string name="title_activity_map">Map</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_detail">Detail</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="title_activity_comment">Comment</string>
    <string name="title_activity_splash">@string/app_name</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_forgot">Forgot</string>
    <string name="title_activity_sign_in">SingIn</string>

    <!-- Login Activity -->
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="btn_login_text">LogIn</string>
    <string name="btn_signup_text">SingUp</string>
    <string name="btn_forgot_text">Forgot Password</string>
    <string name="btn_facebook_text">Login with Facebook</string>
    <string name="btn_skip">Skip</string>
    <string name="error_login_facebook">Unable to get the user information</string>
    <string name="error_msg_login">Failed to log in, try again later</string>
    <string name="txt_omit">Skip</string>
    <string name="btn_terms">See Terms</string>

    <!-- Main Activity -->
    <string name="action_places_map">Map</string>
    <string name="action_search">Search</string>
    <string name="action_share">Share FireUp</string>
    <string name="action_contact">Contact Us</string>
    <string name="action_logout">Logout</string>
    <string name="action_places_my_location">Nearby Places</string>
    <string name="empty_data">Oops! Something went wrong or there are no nearby places.</string>
    <string name="available_rooms"> available rooms</string>
    <string name="error_get_places">Unable to get places.</string>
    <string name="error_get_location">Unable to get the device location.</string>
    <string name="device_not_supported">This device do not support Google Play Services</string>
    <string name="share_text">Try FireUp!, where you might find adult entertaiment places and enjoying the best moment with your couple. \n\nDon\'t forget share it with your friends.  \n\nhttps://goo.gl/aiVTqy</string>
    <string name="share_chooser_title">Share FireUp</string>
    <string name="getting_location">Getting location...</string>
    <string name="dialog_text">Choose an Option</string>
    <string name="dialog_suggestion">Make a Suggestion</string>
    <string name="dialog_bug">Report a Bug</string>
    <string name="dialog_business">Publish Business</string>
    <string name="support_email">info@fireupapp.co</string>
    <string name="contact_chooser_title">Choose a Mailbox</string>
    <string name="action_offer">Offers</string>
    <string name="facebook_account">Follow us on Facebook</string>
    <string name="instagram_account">Follow us on Instagram</string>
    <string name="publish_business">Publish your Business</string>
    <string name="instagram_url">https://www.instagram.com/fireupapp</string>
    <string name="facebook_url">https://www.facebook.com/fireupapp</string>
    <string name="publish_msg"><p>If you wish include your business on FireUp, get visibility and giving your clients great options, contact us.</p><br/><p><strong>FireUp, </strong>the next level in adult entertainment.</p></string>

    <!-- Map Activity -->
    <string name="places_size">Results</string>
    <string name="places_size_singular">Result</string>

    <!-- Search Activity -->
    <string name="desc_search">Choose one or more search fields to get the information you want.</string>
    <string name="sr_low_price">Low Price</string>
    <string name="sr_high_price">High Price</string>
    <string name="sr_text_city">City</string>
    <string name="sr_text_category">Category</string>
    <string name="sr_text_rating">Rating</string>
    <string name="sr_text_distance">Distance</string>
    <string name="bt_text_search">Search</string>
    <string name="first_city">Choose City</string>
    <string name="first_category">Choose Category</string>
    <string name="action_reset">Reset Fields</string>
    <string name="error_search">Choose at least one search field</string>
    <string name="error_search_exception">Unable to perform the search.</string>

    <string-array name="cities">
        <item>Choose City</item>
        <item>Bello</item>
        <item>Bogot\u00e1</item>
        <item>Cali</item>
        <item>Copacabana</item>
        <item>Envigado</item>
        <item>Itagu\u00ed</item>
        <item>La Estrella</item>
        <item>Medell\u00edn</item>
        <item>Pereira</item>
        <item>Rionegro</item>
        <item>Sabaneta</item>
    </string-array>

    <string-array name="categories">
        <item>Choose Category</item>
        <item>Motel</item>
        <item>Sex Shop</item>
        <!--<item>Massage Center</item>
        <item>Gay Bar</item>
        <item>Swinger Bar</item>-->
    </string-array>

    <!-- Detail Activity -->
    <string name="error_place_detail_data">Unable to get place information.</string>
    <string name="btn_book_place">Book Room</string>
    <string name="btn_show_more_desc">View All</string>
    <string name="label_description">Description</string>
    <string name="place_services">Services</string>
    <string name="label_from">From</string>
    <string name="label_to">To</string>
    <string name="label_comment">Comments</string>
    <string name="ok_btn">OK</string>
    <string name="cancel_btn">Cancel</string>
    <string name="comment_dialog_title">Insert a Comment</string>
    <string name="comment_dialog_desc">Insert a comment about the place</string>
    <string name="action_call">Call</string>
    <string name="action_comments">Comments</string>
    <string name="btn_show_services">Show Services</string>
    <string name="error_services">Unable to get place services</string>
    <string name="calculate_distance">Calculating distance...</string>
    <string name="no_services_available">No available services</string>
    <string name="show_route_title">How To Get</string>
    <string name="show_route_msg">Follow the directions to the place</string>
    <string name="take_me">Take Me</string>

    <!-- Place Categories -->
    <string name="motel">Motel</string>
    <string name="sexshop">Sex Shop</string>
    <!--<string name="gaybar">Gay Bar</string>
    <string name="swingerbar">Swinger Bar</string>
    <string name="massagecenter">Massage Center</string>-->

    <!-- Globals -->
    <string name="loader_message">Loading...</string>
    <string name="error_network">No network connection, check your phone and try again.</string>
    <string name="error_location_services_title">Location Services</string>
    <string name="error_location_services">Please enable Location Services, check your phone settings and try again.</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">1606340736301392</string>
    <string name="action_add_comment">Comment</string>
    <string name="comment_rating_title">Rating</string>
    <string name="comment_error_post">Enter a comment</string>
    <string name="comment_error_rating">Choose a rating value</string>
    <string name="comment_success">Comment added successfully</string>
    <string name="comment_submit_error">Unable to save the new comment</string>
    <string name="error_comment_data">Unable to get comments</string>
    <string name="comments_empty">No available comments for this place</string>
    <string name="currency_type">Colombian Pesos</string>
    <string name="msg_login">Find the best adult entertainment places nearby</string>
    <string name="terms">We do not publish anything on Facebook without your express authorization, only you need your information to comment.</string>
    <string name="error_logout">Failed to log out, try again later</string>

    <!-- SignUp Activity -->
    <string name="signup_email">Email</string>
    <string name="signup_username">Username</string>
    <string name="signup_password">Password</string>
    <string name="verify_password">Verify Password</string>

    <string name="error_email_signup">email not entered or invalid format</string>
    <string name="error_username_signup">Enter username</string>
    <string name="error_password_length_signup">Password must be at least 6 characters</string>
    <string name="error_password_signup">Enter password</string>
    <string name="error_password_match_signup">The password does not match</string>
    <string name="error_msg_signup">Failed to register, try again later</string>

    <!-- Forgot Activity -->
    <string name="btn_forgot_send">Send</string>
    <string name="error_msg_forgot">Failed to send email, try again later</string>
    <string name="success_msg_forgot">An email was successfully sent with reset instructions.</string>

    <!-- Offers Activity -->
    <string name="title_activity_offers">Offers</string>
    <string name="empty_offer_data">No offers available</string>
    <string name="error_offer">Unable to get offers</string>
    <string name="title_activity_offer_detail">Offer Detail</string>
    <string name="claim_offer">Claim Coupon</string>
    <string name="go_place_offer">See Place Details</string>
    <string name="qr_error">Unable to get coupon</string>
    <string name="offer_qr_code">Offer Code - </string>
    <string name="offer_qr_place">Place - </string>
    <string name="offer_qr_discount">Discount - </string>
    <string name="title_activity_terms">Terms</string>

    <!-- Terms -->
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="error_terms">Unable to get the terms and conditions, please try later</string>
</resources>
