<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/regular_space"
        android:orientation="vertical"
        tools:context="com.bambazu.fireup.Search">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc_search"
            android:textSize="18sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:background="@color/separator_line"/>

        <!-- Price -->
        <LinearLayout
            android:id="@+id/price_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/sr_low_price"
                android:hint="@string/sr_low_price"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="number"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/sr_high_price"
                android:hint="@string/sr_high_price"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="number"
                android:layout_weight="1" />
        </LinearLayout>

        <!-- City -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/sr_text_city"/>

        <Spinner
            android:id="@+id/sr_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- Rating -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:text="@string/sr_text_rating"/>

        <RatingBar
            android:id="@+id/sr_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize="1.0"
            android:isIndicator="true"
            android:layout_gravity="center_horizontal"
            style="@style/heartRatingBar"/>

        <!-- Distance -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/sr_text_distance" />

        <SeekBar
            android:id="@+id/sr_distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:max="10" />

        <Button
            android:id="@+id/btn_search"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            android:text="@string/bt_text_search"
            android:background="@color/btn_search"
            android:textColor="@color/btn_search_title_color"/>

    </LinearLayout>

</ScrollView>