<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/login_margin"
    android:background="@drawable/bg"
    tools:context="com.bambazu.fireup.SignIn">

    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_username"
        android:textColor="@color/btn_search_title_color"
        android:layout_marginTop="40dp"/>

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_password"
        android:textColor="@color/btn_search_title_color"
        android:layout_marginTop="10dp"
        android:password="true"
        android:layout_below="@+id/login_email"/>

    <Button
        android:id="@+id/btn_send_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/btn_login_text"
        android:textColor="@color/btn_search_title_color"
        android:background="@color/btn_show_more_desc"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/login_password"/>

</RelativeLayout>
