<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:background="@drawable/bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.bambazu.fireup.Login"
        android:layout_gravity="center">

        <LinearLayout
            android:id="@+id/wrapper_login_fields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:padding="10dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_username"
                android:textColor="@color/btn_search_title_color"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_password"
                android:layout_marginTop="10dp"
                android:textColor="@color/btn_search_title_color"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/wrapper_login_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/wrapper_login_fields"
            android:orientation="horizontal"
            android:padding="10dp">

            <Button
                android:id="@+id/btn_login_login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/btn_login_text"
                android:layout_weight="1"
                android:textColor="@color/btn_search_title_color"
                android:background="@color/btn_search"/>

            <Button
                android:id="@+id/btn_login_signup"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/btn_signup_text"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:textColor="@color/btn_search_title_color"
                android:background="@color/btn_show_more_desc"/>

        </LinearLayout>

        <Button
            android:id="@+id/btn_login_forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_forgot_text"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/wrapper_login_buttons"
            android:background="@color/btn_forgot"
            android:textColor="@color/btn_search_title_color"/>

        <LinearLayout
            android:id="@+id/fb_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:padding="10dp"
            android:layout_below="@+id/btn_login_forgot">

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/btn_bg_facebook"
                android:textColor="@color/btn_facebook_color"
                android:text="@string/btn_facebook_text"/>

        </LinearLayout>

        <Button
            android:id="@+id/btn_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_skip"
            android:layout_below="@+id/fb_wrapper"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@color/btn_forgot"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/btn_search_title_color"/>

    </RelativeLayout>
</ScrollView>
